@@ -11109,8 +11109,8 @@
  Kamikaze_drone_equipment: "Kamikaze drone"
  Kamikaze_drone_equipment_desc: "A loitering munition (also known as a suicide droneor kamikaze drone) is an aerial weapon system category in which the munition loiters (waits passively) around the target area for some time and attacks only once a target is located.Loitering munitions enable faster reaction times against concealed or hidden targets that emerge for short periods without placing high-value platforms close to the target area, and also allow more selective targeting as the attack can easily be aborted."
 
- heavy_tank_amphibious_chassis: "Transport Helicopters"
- heavy_tank_amphibious_chassis_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
+ heavy_tank_amphibious_chassis_0: "Transport Helicopters"
+ heavy_tank_amphibious_chassis_0_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
  transport_helicopter1: "TRA Helicopter 1965"
  transport_helicopter1_desc: ""
  transport_helicopter2: "TRA Helicopter 1985"
@@ -11121,16 +11121,16 @@
  transport_helicopter4_desc: ""
  transport_helicopter5: "TRA Helicopter 2035"
  transport_helicopter5_desc: ""
- heavy_tank_amphibious_chassis_1: "Transport Helicopters 1965"
+ heavy_tank_amphibious_chassis_0: "Transport Helicopters 1965"
+ heavy_tank_amphibious_chassis_0_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
+ heavy_tank_amphibious_chassis_1: "Transport Helicopters 1985"
  heavy_tank_amphibious_chassis_1_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
- heavy_tank_amphibious_chassis_2: "Transport Helicopters 1985"
+ heavy_tank_amphibious_chassis_2: "Transport Helicopters 2005"
  heavy_tank_amphibious_chassis_2_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
- heavy_tank_amphibious_chassis_3: "Transport Helicopters 2005"
+ heavy_tank_amphibious_chassis_3: "Transport Helicopters 2015"
  heavy_tank_amphibious_chassis_3_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
- heavy_tank_amphibious_chassis_4: "Transport Helicopters 2015"
+ heavy_tank_amphibious_chassis_4: "Transport Helicopters 2035"
  heavy_tank_amphibious_chassis_4_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
- heavy_tank_amphibious_chassis_5: "Transport Helicopters 2035"
- heavy_tank_amphibious_chassis_5_desc: "Transport Helicopters are used for the transport of troops around or to the battlefield."
 
  convoy: "Convoy"
  convoy_1: "Convoy"
