@@ -26,6 +26,7 @@ v1.12.2
 
  Localization:
   - Removed a confusing statement in the Arab Spring events where it mentioned caretaker governments but was using the name of the former leader instead
+  - Fixed the localization for the Transport Helicopter Equipments
 
  Map:
 
